Added more instructions to Lesson 1

--- a/Lesson 01/Lesson_01.ipynb
+++ b/Lesson 01/Lesson_01.ipynb
@@ -4,8 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lesson 1\n",
-    "\n",
+    "# Lesson 1 - Not All Snakes Slither"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "What is a computer program?\n",
     "\n",
     "What is software?\n",
@@ -26,9 +31,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Remember: Ctrl+Enter to run code in a cell\n",
+    "Remember: press *Ctrl + Enter* in a cell to run code.\n",
     "\n",
-    "Enter more code in cell below."
+    "Write more code in the cell below."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Print command"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Calculating with Python"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Operators: + - * /\n",
+    "\n",
+    "BOMAS ![BOMAS](https://cdn1.byjus.com/wp-content/uploads/2018/01/BODMAS-RULE-ORDER-OF-PERATION.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Variables Are Like Labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A variable is a bit of memory that is used to store a value in a program. You can think of a variable like a container that you can use to store some bit of information in a way that will make sense to a computer.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(variableDoc)"
    ]
   },
   {
